# rusty

./: .gitignore  Cargo.toml  README.md
array_loops/: Cargo.toml
array_loops/src/: main.rs
custom_smart_pointer_drop/: Cargo.toml
custom_smart_pointer_drop/src/: main.rs
enums/src/: main.rs
enums_coin_match_exp/: Cargo.toml
enums_coin_match_exp/src/: main.rs
enums_match_exp/: Cargo.toml
enums_match_exp/src/: main.rs
enums_messages/: Cargo.toml
enums_messages/src/: main.rs
enums_option/: Cargo.toml
enums_option/src/: main.rs
error_handling/src/: main.rs
generic_function_extraction/: Cargo.toml
generic_function_extraction/src/: main.rs
generic_lifetimes/: Cargo.toml
generic_lifetimes/src/: main.rs
generic_structs/src/: main.rs
generic_type_trait_and_lifetimes/: Cargo.toml
generic_type_trait_and_lifetimes/src/: main.rs
hashmaps/src/: main.rs
loops/src/: main.rs
minigrep/src/: lib.rs  main.rs
named_loops/: Cargo.toml
named_loops/src/: main.rs
overflow-handling/src/: main.rs
ownership/src/: main.rs
return_ownership/src/: main.rs
shadowing/src/: main.rs
structs/src/: main.rs
structs_rectangle/src/: main.rs
traits_aggregator/: Cargo.toml
traits_aggregator/src/: lib.rs  main.rs
vectors/src/: main.rs
