[workspace]
resolver = "2"
members = [
    "./guessing_game",
    "./loops",
    "./named_loops",
    "./overflow-handling",
    "./shadowing",
    "./array_loops",
    "./ownership",
    "./return_ownership",
    "./structs",
    "./structs_rectangle",
    "./enums",
    "./enums_messages",
    "./enums_option",
    "./enums_match_exp",
    "vectors",
    "hashmaps",
    "error_handling",
    "generic_function_extraction",
    "generic_structs",
    "traits_aggregator",
    "generic_lifetimes",
    "generic_type_trait_and_lifetimes",
    "minigrep",
    "custom_smart_pointer_drop"
]

